--- a/Data_collection/collection.ipynb
+++ b/Data_collection/collection.ipynb
@@ -2,7 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example \n",
+    "job_title = \"Software Engineer\"\n",
+    "location = \"San Francisco, CA\"\n",
+    "platforms = [\"LinkedIn\", \"Indeed\", \"Glassdoor\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -42,10 +54,7 @@
     "    job_links = [post['href'] for post in job_posts]\n",
     "    return job_links\n",
     "\n",
-    "# Example \n",
-    "job_title = \"Software Engineer\"\n",
-    "location = \"San Francisco, CA\"\n",
-    "platforms = [\"LinkedIn\", \"Indeed\", \"Glassdoor\"]\n",
+    "\n",
     "\n",
     "all_job_links = {}\n",
     "for platform in platforms:\n",
